--- a/Content/style.css
+++ b/Content/style.css
@@ -1,40 +1,70 @@
-.img-container{
-overflow:hidden;
-height:100vh;
-width:100vw;
-display:flex;
-justify-content:center;
-align-items:center;
-background-image:url(Images/image3.jpg);
-background-position:top center;
-background-size:100% 100%;                      
-background-repeat:no-repeat;
-}
-
-
-/*.zoom {
+.img-container {
     overflow: hidden;
-    padding-bottom: 60%;
-    background-size: 100% 100%;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(Images/image3.jpg);
+    margin: 0 auto;
     background-position: top center;
-}*/
-.img-container>div{
-    color:white;
-    font-family:'CV Nepali Fancy';
-    font-size:10vw;
-    text-align:center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
-/*.title {
+
+.img-container > div {
+    color: white;
+    font-family: 'CV Nepali Fancy';
+    font-size: 10vw;
     text-align: center;
 }
 
-h1 {
-    font-size: 6vw;
-    line-height: 1.125;
-    font-family: 'Sansita';
-    text-transform: uppercase;
-}*/
-/*img{
-max-width:100%;
-max-height:100%;
-}*/
+.navbar-nav > li > a {
+    font-size: 20px;
+    font-family: Comic Sans MS;
+    color:white;
+    margin-right:20px;
+}
+.navbar-nav > li > span >a{
+    font-size: 20px;
+    font-family: Comic Sans MS;
+    color: white;
+}
+    .nav > li > a :hover{
+        color:black;
+    }
+    @media (min-width: 768px) {
+        .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+        margin-left: -100px;
+ 
+    }
+}
+    .wrapper-container{
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        padding-top:100px;
+        background-color:lightgray;
+        height:92vh;
+    }
+    .wrapper{
+        height:40vh;
+        width:20vw;
+        background-color:lightgray;
+        
+    }
+    .acc_image{
+        display:flex;
+        justify-content:center;
+        align-items:center;
+    }
+    .acc_title{
+        font-size:40px;
+        padding-left:10px;
+    }
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+}
