--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,7 +1,71 @@
-﻿
+﻿@model Gharelu_Utpadan.Models.UserModel
+
 @{
     ViewBag.Title = "Register";
-}
+    Layout = "~/Views/Shared/layout1.cshtml";
 
-<h2>Register</h2>
+}
+<style>
+    .col-md-4, .col-md-8, .col-lg-8, .col-lg-4, .col-sm-6, .col-xs-6 {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .navbar {
+        margin-bottom: -10px
+    }
+</style>
+<div class="acc_image col-md-8 col-sm-12 col-lg-8 col-xs-12">
+    <div><img src="~/Content/Images/image3.jpg" alt="no display" style="overflow:hidden;object-fit:contain;height:92vh;" /></div>
+</div>
+@* col-md-4 col-sm-6 col-xs-6 col-lg-4  *@
+<div class="wrapper-container col-md-4 col-sm-12 col-xs-12 col-lg-4 ">
+    <div class="wrapper">
+        <div class="acc_title">Register</div>
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+        {
+            <div>
+                <div class="form-group input-lg">
+                    @Html.LabelFor(m => Model.Name)
+                    @Html.EditorFor(m => Model.Name, new { htmlAttributes = new { @class = "form-control input-lg", @Value = "Abinash" } })
+                    @Html.ValidationMessageFor(m => Model.Name)
+                </div>
+            </div>
+            <div>
+                <div class="form-group input-lg">
+                    @Html.LabelFor(m => Model.Address)
+                    @Html.EditorFor(m => Model.Address, new { htmlAttributes = new { @class = "form-control", @Value = "Dallu" } })
+                    @Html.ValidationMessageFor(m => Model.Address)
+                </div>
+            </div>
+
+            <div>
+                <div class="form-group input-lg">
+                    @Html.LabelFor(m => Model.MobileNumber)
+                    @Html.EditorFor(m => Model.MobileNumber, new { htmlAttributes = new { @class = "form-control input-lg", @Value = "9813742310" } })
+                    @Html.ValidationMessageFor(m => Model.MobileNumber)
+                </div>
+            </div>
+            <div>
+                <div class="form-group input-lg">
+                    @Html.LabelFor(m => Model.Password)
+                    @Html.EditorFor(m => Model.Password, new { htmlAttributes = new { @class = "form-control", @Value = "" } })
+                    @Html.ValidationMessageFor(m => Model.Password)
+                </div>
+            </div>
+            <div>
+                <div class="form-group input-lg">
+                    @Html.LabelFor(m => Model.ConfirmPassword)
+                    @Html.EditorFor(m => Model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", @Value = "" } })
+                    @Html.ValidationMessageFor(m => Model.ConfirmPassword)
+                </div>
+            </div>
+            <br />
+
+            <div class="form-group input-lg">
+                <button type="submit" class="btn btn-lg btn-primary">Register</button>
+            </div>
+        }
+    </div>
+</div>
 
