--- a/Views/Shared/layout1.cshtml
+++ b/Views/Shared/layout1.cshtml
@@ -9,12 +9,6 @@
 </head>
 
 <body>
-    <div class="img-container">
-        <div>
-            w/]n' pTkfbg
-        </div>
-    </div>
-
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
         <div class="container">
             <div class="navbar-header">
@@ -29,35 +23,18 @@
                     <li class="nav-item">@Html.ActionLink("About", "About", "Home", new { @class = "nav-link" }) </li>
                     <li class="nav-item">@Html.ActionLink("Products", "Product", "Product", new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new { @class = "nav-link" })</li>
-                    <li>
-                        <a href="@Url.Action("Login", "Account")"><span class="glyphicon glyphicon-log-in"></span> Login</a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("Register", "Account")"><span class="glyphicon glyphicon-user"></span> Register</a>
-                    </li>
-                    @*<li class="nav-item">@Html.ActionLink("Login", "Login", "Account", new { @class = "glyhpicon glyphicon-user nav-link " })</li>
-                    <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", new { @class = "nav-link" })</li>*@
+                    <li class="nav-item">@Html.ActionLink("Login", "Login", "Account", new { @class = "glyhpicon glyphicon-user nav-link " })</li>
+                    <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
-</nav>
+    </nav>
     <div>
         @RenderBody()
-        <hr />
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script type="text/javascript">
-        $(window).scroll(function () {
-            var scroll = $(window).scrollTop();
-            $(".img-container").css({
-                backgroundSize: (100 + scroll / 5) + "%",
-                top: -(scroll / 10) + "%",
-            });
-        });
-
-    </script>
 </body>
 </html>
